more space for CanonicalizeUris